--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="ro" xmlns="http://www.w3.org/1999/html">
 <head>
 
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/nav.css" />
-    <link rel="stylesheet" href="css/style.css" media="only screen and (min-width:1000px)"/>
-    <link rel="stylesheet" href="css/style-1000.css" media="only screen and (min-width:451px) and (max-width:999px)" />
-    <link rel="stylesheet" href="css/style-450.css" media="only screen and (max-width:450px)"/>
+    <link rel="stylesheet" href="resurse/css/main.css" />
+    <link rel="stylesheet" href="resurse/css/nav.css" />
+    <link rel="stylesheet" href="resurse/css/style.css" media="only screen and (min-width:1000px)"/>
+    <link rel="stylesheet" href="resurse/css/style-1000.css" media="only screen and (min-width:451px) and (max-width:999px)" />
+    <link rel="stylesheet" href="resurse/css/style-450.css" media="only screen and (max-width:450px)"/>
     <script src="https://use.fontawesome.com/420035dafb.js"></script>
     <!--2) Folositi 4 taguri meta relevante pentru a specifica: charset-ul, autorul, cuvintele cheie, descrierea.-->
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@
     <!--3) Adaugati un title corespunzator continutului textului-->
     <title>AlexTruck Store</title>
     <!--4) Adaugati un favicon relevant pentru temă.-->
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="resurse/ico/favicon.ico">
 
 </head>
 
